--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <version>3.3.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>br.com.edward</groupId>
     <artifactId>dinosaur</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
 
     <name>dinosaur</name>
     <description>Dinosaur Edward Game</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
 
         <!-- Tests -->
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <jacoco.maven.plugin.version>0.8.8</jacoco.maven.plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <jacoco.maven.plugin.version>0.8.10</jacoco.maven.plugin.version>
 
         <!-- Package -->
         <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
@@ -145,6 +145,10 @@
                                         <argument>${project.build.directory}/output</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--vendor</argument>
+                                        <argument>Edward</argument>
                                         <argument>--icon</argument>
                                         <argument>${project.basedir}/src/main/resources/icons/icon.png</argument>
                                         <argument>--dest</argument>
@@ -157,7 +161,7 @@
                 </plugins>
             </build>
         </profile>
-         <profile>
+        <profile>
             <id>windows</id>
             <build>
                 <plugins>
@@ -181,6 +185,10 @@
                                         <argument>${project.build.directory}/output</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--vendor</argument>
+                                        <argument>Edward</argument>
                                         <argument>--icon</argument>
                                         <argument>${project.basedir}/src/main/resources/icons/icon.ico</argument>
                                         <argument>--dest</argument>
@@ -219,6 +227,10 @@
                                         <argument>${project.build.directory}/output</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--vendor</argument>
+                                        <argument>Edward</argument>
                                         <argument>--icon</argument>
                                         <argument>${project.basedir}/src/main/resources/icons/icon.icns</argument>
                                         <argument>--dest</argument>
