--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: @project.name@
     version: @project.version@
+  threads:
+    virtual:
+      enabled: true
 logging:
   file:
     name: ${user.home}/dinosaur/logs/dinosaur.log
